--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 <h1 class = "title">
     Pokemon Random vs
 </h1>
-<div class = "pokemon-list"> 
-    <div class = "pokemon">
-        <img src="Blaziken.png" alt="">
-        <p>Blaziken</p>
+
+<button class = "button" id = "refresh-Button"> 
+    New Battle!
+</button>
+<div class = "pokemon-list" id = "pokemonList"> 
+    <div class = "pokemon" id = "poke-1">
+        <img src="" alt="">
+        <p></p>
     </div>
     <div class = "vs">vs.</div>
-    <div class = "pokemon">
-        <img src="Blaziken.png" alt="">
-        <p>Blaziken</p>
+    <div class = "pokemon" id = "poke-2">
+        <img src="" alt="">
+        <p></p>
     </div>
 </div>
     <script src="app.js">
