--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
 <button class = "button" id = "refresh-Button"> 
     New Battle!
 </button>
+<button class = "button" id = "move-button-1">
+<button class = "button" id = "move-button-2">
+
+</button>
 <div class = "pokemon-list" id = "pokemonList"> 
-    <div class = "pokemon" id = "poke-1">
+    <div class = "pokemon" id = "poke-2">
         <img src="" alt="">
         <p></p>
     </div>
     <div class = "vs">vs.</div>
-    <div class = "pokemon" id = "poke-2">
+    <div class = "pokemon" id = "poke-1">
         <img src="" alt="">
         <p></p>
     </div>
