Fixed attack moves. They now display correctly, with no current effect. It also displays the pokemon types now.

--- a/index.html
+++ b/index.html
@@ -14,19 +14,23 @@
 <button class = "button" id = "refresh-Button"> 
     New Battle!
 </button>
-<button class = "button" id = "move-button-1">
-<button class = "button" id = "move-button-2">
+
+
 
 </button>
 <div class = "pokemon-list" id = "pokemonList"> 
     <div class = "pokemon" id = "poke-2">
         <img src="" alt="">
         <p></p>
+        <p class = "pokemon-types" id = "pokemon-types-2"></p> <!-- Pokemon Types -->
+        <button class = "button" id = "move-button-2"></button>
     </div>
     <div class = "vs">vs.</div>
     <div class = "pokemon" id = "poke-1">
         <img src="" alt="">
         <p></p>
+        <p class = "pokemon-types" id = "pokemon-types-1"></p> <!-- Pokemon Types -->
+        <button class = "button" id = "move-button-1"></button>
     </div>
 </div>
     <script src="app.js">
